sources dialog: Improve the error when no sources are found

https://bugzilla.gnome.org/show_bug.cgi?id=737514